--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -1,6 +1,22 @@
 @import url("http://fonts.googleapis.com/css?family=Numans");
 @import url("http://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700,400italic,700italic");
-@import 'lib/animate-custom.css';
+@import '../vendor/stylesheets/animate-custom.css';
+body div.page.github_fork_me {
+  z-index: 200;
+  position: fixed;
+  top: 0px;
+  right: 0px;
+}
+body div.page.navbar {
+  z-index: 100;
+  position: fixed;
+  top: 0px;
+}
+body div.page.container {
+  z-index: 0;
+  position: absolute;
+  top: 40px;
+}
 body {
   background: #eee;
   margin: 0px;
@@ -11,6 +27,8 @@ body {
 .animated {
   -webkit-animation-fill-mode: both;
   -moz-animation-fill-mode: both;
+  -o-animation-fill-mode: both;
+  -ms-animation-fill-mode: both;
   animation-fill-mode: both;
 }
 a:link,
@@ -19,6 +37,8 @@ a:visited {
   text-decoration: none;
   -webkit-transition: color 200ms;
   -moz-transition: color 200ms;
+  -o-transition: color 200ms;
+  -ms-transition: color 200ms;
   transition: color 200ms;
 }
 a:link {
@@ -55,7 +75,6 @@ samp {
 }
 header {
   position: relative;
-  z-index: 100;
   font-size: 70px;
   padding: 20px 0 20px;
   font-family: "Numans", 'Helvetica Neue', Helvetica, Arial, sans-serif;
@@ -63,130 +82,23 @@ header {
 header .lock {
   line-height: 1em;
 }
-header .logo {
-  float: left;
-  font-size: 100%;
-  margin: 5px 21px;
-}
-header .logo .part {
-  display: block;
-}
-header .logo .part img {
-  height: 27px;
-  display: block;
-}
-header .logo .left,
-header .logo .right {
-  -webkit-animation-delay: 1.3s;
-  -moz-animation-delay: 1.3s;
-  animation-delay: 1.3s;
-}
-header h1 {
-  margin: 0px;
-  padding: 0px;
-  float: left;
-  font-size: 100%;
-  font-weight: normal;
-}
-header .knock {
-  -webkit-animation-delay: 0.1s;
-  -moz-animation-delay: 0.1s;
-  animation-delay: 0.1s;
-}
-header .magic {
-  -webkit-animation-delay: 0.4s;
-  -moz-animation-delay: 0.4s;
-  animation-delay: 0.4s;
-}
-header .back {
-  -webkit-animation-delay: 1s;
-  -moz-animation-delay: 1s;
-  animation-delay: 1s;
-}
-header h2 {
-  clear: both;
-  font-size: 20px;
-  margin: 1ex 0;
-  font-weight: normal;
-  color: #555;
-  margin-left: 90px;
-}
-nav#navigation {
-  position: fixed;
-  z-index: 200;
-  bottom: 0px;
-  right: 0px;
-  padding: 10px;
-  background: #eee;
-  -moz-border-radius-topleft: 2px;
-  -webkit-border-top-left-radius: 2px;
-  border-top-left-radius: 2px;
-}
-nav#navigation .separator {
-  margin: 0px;
-  padding: 0px;
-  margin-left: 1ex;
-  float: left;
-}
-nav#navigation .separator .label {
-  margin: 0 1ex;
-}
-.selection {
-  border: 1px solid #ccc;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  border-radius: 4px;
-  display: inline-block;
-  vertical-align: middle;
-  border-width: 1px;
-  border-style: solid;
-  border-color: #333 #666 #fff;
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #777), color-stop(1, #999));
-  background: -webkit-linear-gradient(top, #777 0%, #999 100%);
-  background: -moz-linear-gradient(top, #777 0%, #999 100%);
-  background: linear-gradient(top, #777 0%, #999 100%);
-}
-.selection .option {
-  display: inline-block;
-  vertical-align: middle;
-}
-.selection .option input[type="radio"] {
-  display: none;
-}
-.selection .option input[type="radio"] + label {
-  display: inline-block;
-  background: none transparent;
-  margin: -1px -1px 0;
-  padding: 0.5ex 1ex;
-  vertical-align: middle;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  border-radius: 3px;
-  cursor: pointer;
-}
-.selection .option input[type="radio"]:checked + label {
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #666), color-stop(1, #333));
-  background: -webkit-linear-gradient(top, #666 0%, #333 100%);
-  background: -moz-linear-gradient(top, #666 0%, #333 100%);
-  background: linear-gradient(top, #666 0%, #333 100%);
-  color: #fff;
-  text-shadow: 0px 1px 0px rgba(255,255,255,0.00), 0px -1px 0px #000;
-  -webkit-box-shadow: inset 0px 0px 0px 1px rgba(0,0,0,0.40);
-  -moz-box-shadow: inset 0px 0px 0px 1px rgba(0,0,0,0.40);
-  box-shadow: inset 0px 0px 0px 1px rgba(0,0,0,0.40);
-  cursor: default;
-}
 section#content {
   position: relative;
   z-index: 100;
   -webkit-animation-delay: 2s;
   -moz-animation-delay: 2s;
+  -o-animation-delay: 2s;
+  -ms-animation-delay: 2s;
   animation-delay: 2s;
   line-height: 1.2em;
   -webkit-font-smoothing: antialiased;
 }
 section#content .content {
-  padding: 0 10px;
+  padding: 10px 10px;
+}
+section#content .content p,
+section#content .content ul {
+  margin: 10px 0px;
 }
 section#content .cols.wrapped {
   border: 1px solid #808080;
@@ -198,10 +110,14 @@ section#content .cols.wrapped {
 }
 section#content .cols {
   overflow: hidden;
+  font-size: 1.3em;
 }
 section#content .cols .col {
   width: 33.33%;
   float: left;
+}
+section#content p {
+  font-size: 16px;
 }
 section#content p,
 section#content pre {
@@ -227,17 +143,21 @@ section#content pre.hl:after {
 }
 section#content pre.hl:before {
   left: 0px;
-  background: -webkit-gradient(linear, right top, left top, color-stop(0, rgba(68,68,68,0.00)), color-stop(1, #444));
-  background: -webkit-linear-gradient(right, rgba(68,68,68,0.00) 0%, #444 100%);
-  background: -moz-linear-gradient(right, rgba(68,68,68,0.00) 0%, #444 100%);
-  background: linear-gradient(right, rgba(68,68,68,0.00) 0%, #444 100%);
+  background: -webkit-gradient(linear, right top, left top, color-stop(0, rgba(68,68,68,0)), color-stop(1, #444));
+  background: -webkit-linear-gradient(right, rgba(68,68,68,0) 0%, #444 100%);
+  background: -moz-linear-gradient(right, rgba(68,68,68,0) 0%, #444 100%);
+  background: -o-linear-gradient(right, rgba(68,68,68,0) 0%, #444 100%);
+  background: -ms-linear-gradient(right, rgba(68,68,68,0) 0%, #444 100%);
+  background: linear-gradient(right, rgba(68,68,68,0) 0%, #444 100%);
 }
 section#content pre.hl:after {
   right: 0px;
-  background: -webkit-gradient(linear, left top, right top, color-stop(0, rgba(68,68,68,0.00)), color-stop(1, #444));
-  background: -webkit-linear-gradient(left, rgba(68,68,68,0.00) 0%, #444 100%);
-  background: -moz-linear-gradient(left, rgba(68,68,68,0.00) 0%, #444 100%);
-  background: linear-gradient(left, rgba(68,68,68,0.00) 0%, #444 100%);
+  background: -webkit-gradient(linear, left top, right top, color-stop(0, rgba(68,68,68,0)), color-stop(1, #444));
+  background: -webkit-linear-gradient(left, rgba(68,68,68,0) 0%, #444 100%);
+  background: -moz-linear-gradient(left, rgba(68,68,68,0) 0%, #444 100%);
+  background: -o-linear-gradient(left, rgba(68,68,68,0) 0%, #444 100%);
+  background: -ms-linear-gradient(left, rgba(68,68,68,0) 0%, #444 100%);
+  background: linear-gradient(left, rgba(68,68,68,0) 0%, #444 100%);
 }
 section#content ul {
   display: block;
@@ -256,24 +176,26 @@ section#content .kb {
 section#content .comparison {
   width: 100%;
   margin: 10px auto 20px;
+  border-collapse: separate;
+  border-spacing: 2px;
 /*
-		.col .content
-			border 2px solid gray
+    .col .content
+      border 2px solid gray
 
-		.first
-			text-align left
-			.content
-				border-right 0px none
-		.mid
-			text-align center
-			.content
-				padding 20px 10px
-				margin -20px 0px
-		.last
-			text-align right
-			.content
-				border-left 0px none
-		*/
+    .first
+      text-align left
+      .content
+        border-right 0px none
+    .mid
+      text-align center
+      .content
+        padding 20px 10px
+        margin -20px 0px
+    .last
+      text-align right
+      .content
+        border-left 0px none
+    */
 }
 section#content .comparison col {
   width: 30%;
@@ -304,16 +226,19 @@ section#content .comparison tr th.ref {
   text-align: center;
 }
 section#content .comparison tbody td {
-  border: 1px solid rgba(0,0,0,0.20);
+  border: 1px solid rgba(0,0,0,0.2);
 }
 section#content .comparison th {
   background: #ddd;
+  font-size: 1.4em;
+  padding: 1em 2px;
 }
 section#content .comparison th.kb {
-  font-size: 1.4em;
+  font-size: 1.8em;
 }
-section#content .comparison td.kb {
+section#content .comparison td {
   font-size: 1.3em;
+  padding: 0.5em 2ex;
 }
 section#content .comparison td.hidden {
   border: 0px none;
@@ -322,12 +247,12 @@ section#content .comparison td.hidden {
 section#content .comparison td.yes {
   background: #80b34d;
   color: #fff;
-  text-shadow: 0px 1px 0px rgba(0,0,0,0.20);
+  text-shadow: 0px 1px 0px rgba(0,0,0,0.2);
 }
 section#content .comparison td.no {
   background: #bf4040;
   color: #fff;
-  text-shadow: 0px -1px 0px rgba(0,0,0,0.20);
+  text-shadow: 0px -1px 0px rgba(0,0,0,0.2);
 }
 section#content .comparison td.own {
   text-align: center;
@@ -373,6 +298,13 @@ section#content .comparison td.dependent:before {
 section#content .notes {
   font-size: 0px;
 }
+section#content .notes h1 {
+  font-size: 1.2em;
+}
+section#content .notes p {
+  font-size: 1em;
+  margin: 10px 0px;
+}
 section#content .notes h2 {
   font-size: 0px;
   margin: 0px;
@@ -394,17 +326,5 @@ section#content .notes section > * {
   padding: 1px 3%;
 }
 section#content :target {
-  background: rgba(0,0,0,0.10);
-}
-footer {
-  font-size: 12px;
-  border-top: 2px solid #808080;
-  margin-top: 3em;
-  padding-top: 1em;
-  padding-bottom: 1em;
-  text-align: center;
-}
-footer p:last-child {
-  font-size: 0.8em;
-  margin-top: 1ex;
+  background: rgba(0,0,0,0.1);
 }
