Updated release notes and branding

--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -31,6 +31,9 @@ body {
   -ms-animation-fill-mode: both;
   animation-fill-mode: both;
 }
+.kb {
+  font-family: "Numans", 'Helvetica Neue', Helvetica, Arial, sans-serif;
+}
 a:link,
 a:visited {
   color: #2ba8d9;
@@ -93,238 +96,6 @@ section#content {
   line-height: 1.2em;
   -webkit-font-smoothing: antialiased;
 }
-section#content .content {
-  padding: 10px 10px;
-}
-section#content .content p,
-section#content .content ul {
-  margin: 10px 0px;
-}
-section#content .cols.wrapped {
-  border: 1px solid #808080;
-  padding: 0 10px;
-  margin: 10px;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  border-radius: 3px;
-}
-section#content .cols {
-  overflow: hidden;
-  font-size: 1.3em;
-}
-section#content .cols .col {
-  width: 33.33%;
-  float: left;
-}
-section#content p {
-  font-size: 16px;
-}
-section#content p,
-section#content pre {
-  margin: 1.2em 0px;
-}
-section#content pre.hl {
-  position: relative;
-}
-section#content pre.hl code {
-  position: relative;
-  padding: 1.2em 2em;
-  overflow: auto;
-  z-index: 100;
-}
-section#content pre.hl:before,
-section#content pre.hl:after {
-  z-index: 200;
-  content: '';
-  position: absolute;
-  top: 0px;
-  height: 100%;
-  width: 2em;
-}
-section#content pre.hl:before {
-  left: 0px;
-  background: -webkit-gradient(linear, right top, left top, color-stop(0, rgba(68,68,68,0)), color-stop(1, #444));
-  background: -webkit-linear-gradient(right, rgba(68,68,68,0) 0%, #444 100%);
-  background: -moz-linear-gradient(right, rgba(68,68,68,0) 0%, #444 100%);
-  background: -o-linear-gradient(right, rgba(68,68,68,0) 0%, #444 100%);
-  background: -ms-linear-gradient(right, rgba(68,68,68,0) 0%, #444 100%);
-  background: linear-gradient(right, rgba(68,68,68,0) 0%, #444 100%);
-}
-section#content pre.hl:after {
-  right: 0px;
-  background: -webkit-gradient(linear, left top, right top, color-stop(0, rgba(68,68,68,0)), color-stop(1, #444));
-  background: -webkit-linear-gradient(left, rgba(68,68,68,0) 0%, #444 100%);
-  background: -moz-linear-gradient(left, rgba(68,68,68,0) 0%, #444 100%);
-  background: -o-linear-gradient(left, rgba(68,68,68,0) 0%, #444 100%);
-  background: -ms-linear-gradient(left, rgba(68,68,68,0) 0%, #444 100%);
-  background: linear-gradient(left, rgba(68,68,68,0) 0%, #444 100%);
-}
-section#content ul {
-  display: block;
-  margin: 1.2em 0;
-  padding: 0px;
-}
-section#content ul li {
-  list-style: square outside;
-  padding: 0px;
-  margin: 0px;
-  margin-left: 1em;
-}
 section#content .kb {
   font-family: "Numans", 'Helvetica Neue', Helvetica, Arial, sans-serif;
-}
-section#content .comparison {
-  width: 100%;
-  margin: 10px auto 20px;
-  border-collapse: separate;
-  border-spacing: 2px;
-/*
-    .col .content
-      border 2px solid gray
-
-    .first
-      text-align left
-      .content
-        border-right 0px none
-    .mid
-      text-align center
-      .content
-        padding 20px 10px
-        margin -20px 0px
-    .last
-      text-align right
-      .content
-        border-left 0px none
-    */
-}
-section#content .comparison col {
-  width: 30%;
-}
-section#content .comparison col.mid {
-  width: 35%;
-}
-section#content .comparison col.ref {
-  width: 5%;
-}
-section#content .comparison tr td,
-section#content .comparison tr th {
-  position: relative;
-  padding: 0.5em 2ex;
-  line-height: 1em;
-  text-align: left;
-}
-section#content .comparison tr td:first-child,
-section#content .comparison tr th:first-child {
-  text-align: right;
-}
-section#content .comparison tr td.mid,
-section#content .comparison tr th.mid {
-  text-align: center;
-}
-section#content .comparison tr td.ref,
-section#content .comparison tr th.ref {
-  text-align: center;
-}
-section#content .comparison tbody td {
-  border: 1px solid rgba(0,0,0,0.2);
-}
-section#content .comparison th {
-  background: #ddd;
-  font-size: 1.4em;
-  padding: 1em 2px;
-}
-section#content .comparison th.kb {
-  font-size: 1.8em;
-}
-section#content .comparison td {
-  font-size: 1.3em;
-  padding: 0.5em 2ex;
-}
-section#content .comparison td.hidden {
-  border: 0px none;
-  background: none transparent;
-}
-section#content .comparison td.yes {
-  background: #80b34d;
-  color: #fff;
-  text-shadow: 0px 1px 0px rgba(0,0,0,0.2);
-}
-section#content .comparison td.no {
-  background: #bf4040;
-  color: #fff;
-  text-shadow: 0px -1px 0px rgba(0,0,0,0.2);
-}
-section#content .comparison td.own {
-  text-align: center;
-  background: #80b34d;
-  color: #1a240f;
-  text-shadow: 0px -1px 0px #b3e085;
-}
-section#content .comparison td.done {
-  font-family: Helvetica, Arial, sans-serif;
-  background: #80b34d;
-  color: #33471f;
-  text-shadow: 0px -1px 0px #1a240f;
-  font-size: 2em;
-  padding: 0px;
-  text-align: center;
-}
-section#content .comparison td.ref {
-  padding-left: 0px;
-  padding-right: 0px;
-  border: 0px none;
-  line-height: 0.5em;
-}
-section#content .comparison:hover tr td {
-  opacity: 0.7;
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=70);
-}
-section#content .comparison:hover tr:hover td {
-  opacity: 1;
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
-}
-section#content .comparison td.dependent:before {
-  content: '▼';
-  display: block;
-  position: absolute;
-  top: -0.5em;
-  left: 50%;
-  font-size: 20px;
-  line-height: 1em;
-  width: 3em;
-  margin: -2px -1.5em;
-  color: #33471f;
-}
-section#content .notes {
-  font-size: 0px;
-}
-section#content .notes h1 {
-  font-size: 1.2em;
-}
-section#content .notes p {
-  font-size: 1em;
-  margin: 10px 0px;
-}
-section#content .notes h2 {
-  font-size: 0px;
-  margin: 0px;
-  padding: 0px;
-  line-height: 0px;
-  text-indent: -9999px;
-  overflow: hidden;
-}
-section#content .notes section {
-  width: 30%;
-  display: inline-block;
-  font-size: 13px;
-  padding: 0;
-  margin-right: 1%;
-  vertical-align: top;
-  *float: left;
-}
-section#content .notes section > * {
-  padding: 1px 3%;
-}
-section#content :target {
-  background: rgba(0,0,0,0.1);
 }
