Added Knockback-Inspector tutorial.

--- a/stylesheets/tutorial.css
+++ b/stylesheets/tutorial.css
@@ -40,12 +40,22 @@ section div {
   padding: 0;
 }
 ol li {
-  font-size: 0.9em;
+  font-size: 14px;
 }
 ul li {
-  font-size: 0.9em;
+  font-size: 14px;
+  font-weight: normal;
+}
+ol li ul li,
+ul li ul li {
+  font-size: 14px;
   font-weight: normal;
 }
 p {
   font-size: 0.8em;
+}
+img.screen_shot {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
