--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -1,6 +1,12 @@
 @import url("http://fonts.googleapis.com/css?family=Numans");
 @import url("http://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700,400italic,700italic");
 @import '../vendor/stylesheets/animate-custom.css';
+body {
+  background: #eee;
+  margin: 0px;
+  font-family: Helvetica, Arial, sans-serif;
+  min-width: 520px;
+}
 body div.page.github_fork_me {
   z-index: 200;
   position: fixed;
@@ -16,13 +22,6 @@ body div.page.container {
   z-index: 0;
   position: absolute;
   top: 40px;
-}
-body {
-  background: #eee;
-  margin: 0px;
-  padding: 0px;
-  font-family: Helvetica, Arial, sans-serif;
-  min-width: 520px;
 }
 .animated {
   -webkit-animation-fill-mode: both;
@@ -72,7 +71,6 @@ samp {
   font-family: "Ubuntu Mono", monospaced;
 }
 #wrap {
-  position: relative;
   max-width: 960px;
   margin: 0 auto;
 }
@@ -108,6 +106,8 @@ section#content .kb {
   background-color: #ebd6ff;
   border: 1px solid #ccc;
   -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
   border-radius: 4px;
+}
+.accordion-heading {
+  background-color: #e5e5e5;
 }
