--- a/stylesheets/layout_components.css
+++ b/stylesheets/layout_components.css
@@ -107,7 +107,6 @@ div#script_language .separator .label {
 div#script_language .selection {
   border: 1px solid #ccc;
   -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
   border-radius: 4px;
   display: inline-block;
   vertical-align: middle;
@@ -125,21 +124,20 @@ div#script_language .selection .option {
   display: inline-block;
   vertical-align: middle;
 }
-div#script_language .selection .option input[type="radio"] {
+div#script_language .selection .option input[type='radio'] {
   display: none;
 }
-div#script_language .selection .option input[type="radio"] + label {
+div#script_language .selection .option input[type='radio'] + label {
   display: inline-block;
   background: none transparent;
   margin: -1px -1px 0;
   padding: 0.5ex 1ex;
   vertical-align: middle;
   -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
   border-radius: 3px;
   cursor: pointer;
 }
-div#script_language .selection .option input[type="radio"]:checked + label {
+div#script_language .selection .option input[type='radio']:checked + label {
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #666), color-stop(1, #333));
   background: -webkit-linear-gradient(top, #666 0%, #333 100%);
   background: -moz-linear-gradient(top, #666 0%, #333 100%);
@@ -149,7 +147,6 @@ div#script_language .selection .option input[type="radio"]:checked + label {
   color: #fff;
   text-shadow: 0px 1px 0px rgba(255,255,255,0), 0px -1px 0px #000;
   -webkit-box-shadow: inset 0px 0px 0px 1px rgba(0,0,0,0.4);
-  -moz-box-shadow: inset 0px 0px 0px 1px rgba(0,0,0,0.4);
   box-shadow: inset 0px 0px 0px 1px rgba(0,0,0,0.4);
   cursor: default;
 }
