Update for 0.17.0 release

--- a/css/index.css
+++ b/css/index.css
@@ -62,6 +62,9 @@ section#content ul li {
   margin: 0px;
   margin-left: 1em;
 }
+section#content .skip-cell {
+  visibility: hidden;
+}
 @media (max-width: 510px) {
   section#content .content {
     padding: 0px 0px;
