--- a/css/layout_components.css
+++ b/css/layout_components.css
@@ -122,12 +122,11 @@ div#script_language .selection {
   border-width: 1px;
   border-style: solid;
   border-color: #333 #666 #333;
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #777), color-stop(1, #999));
-  background: -webkit-linear-gradient(top, #777 0%, #999 100%);
-  background: -moz-linear-gradient(top, #777 0%, #999 100%);
-  background: -o-linear-gradient(top, #777 0%, #999 100%);
-  background: -ms-linear-gradient(top, #777 0%, #999 100%);
-  background: linear-gradient(top, #777 0%, #999 100%);
+  background: -webkit-linear-gradient(top, #777, #999);
+  background: -moz-linear-gradient(top, #777, #999);
+  background: -o-linear-gradient(top, #777, #999);
+  background: -ms-linear-gradient(top, #777, #999);
+  background: linear-gradient(to bottom, #777, #999);
 }
 div#script_language .selection .option {
   display: inline-block;
@@ -147,12 +146,11 @@ div#script_language .selection .option input[type='radio'] + label {
   cursor: pointer;
 }
 div#script_language .selection .option input[type='radio']:checked + label {
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #666), color-stop(1, #333));
-  background: -webkit-linear-gradient(top, #666 0%, #333 100%);
-  background: -moz-linear-gradient(top, #666 0%, #333 100%);
-  background: -o-linear-gradient(top, #666 0%, #333 100%);
-  background: -ms-linear-gradient(top, #666 0%, #333 100%);
-  background: linear-gradient(top, #666 0%, #333 100%);
+  background: -webkit-linear-gradient(top, #666, #333);
+  background: -moz-linear-gradient(top, #666, #333);
+  background: -o-linear-gradient(top, #666, #333);
+  background: -ms-linear-gradient(top, #666, #333);
+  background: linear-gradient(to bottom, #666, #333);
   color: #fff;
   text-shadow: 0px 1px 0px rgba(255,255,255,0), 0px -1px 0px #000;
   -webkit-box-shadow: inset 0px 0px 0px 1px rgba(0,0,0,0.4);
